Adds first markup for header.

--- a/index.html
+++ b/index.html
@@ -5,8 +5,60 @@
     <title>HTML Academy: Девайс</title>
   </head>
   <body>
+    <header class="site-header">
+      <img class="logo">
+      <div class="header-panel">
+        <div class="site-search">
+          <img class="search-icon">
+          <input type="text" class="search-field">
+        </div>
+        <div class="login-wrapper">
+          <img class="login-icon">
+          <a href="#">Вйоти</a>
+        </div>
+        <div class="compare-wrapper">
+          <img class="compare-icon">
+          <a href="#">Сравнить</a>
+        </div>
+        <div class="cart-wrapper">
+          <img class="cart-icon">
+          <a href="#">Корзина</a>
+        </div>
+      </div>
+      <nav class="header-nav">
+        <section class="catalog-nav">
+          <a href="#">КАТАЛОГ ТОВАРОВ</a>
+          <img class="catalog-plus">
+          <ul class="items-list">
+            <li class="catalog-item"><a href="#">Виртуальная реальность</a></li>
+            <li class="catalog-item"><a href="#">Моноподы для селфи</a></li>
+            <li class="catalog-item"><a href="#">Экшн-камеры</a></li>
+            <li class="catalog-item"><a href="#">Фитнес-браслеты</a></li>
+            <li class="catalog-item"><a href="#">Умные часы</a></li>
+            <li class="catalog-item"><a href="#">Квадрокоптеры</a></li>
+          </ul>
+        </section>
+        <section class="delivery-nav">
+          <a href="#">ДОСТАВКА</a>
+        </section>
+        <section class="delivery-nav">
+          <a href="#">ДОСТАВКА</a>
+        </section>
+        <section class="guarantee-nav">
+          <a href="#">ГАРАНТИЯ</a>
+        </section>
+        <section class="contacts-nav">
+          <a href="#">КОНТАКТЫ</a>
+        </section>
+      </nav>
+      <div class="slider-wrapper">
+        <div class="slider-element">
+          <img src="#">
 
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">Профессиональный HTML и CSS, уровень 1</a>».</p>
-
+        </div>
+      </div>
+    </header>
+  <main></main>
+  <footer></footer>
   </body>
 </html>
