Replaces picture logo with a link <a>, adds form with search area and submit button

--- a/index.html
+++ b/index.html
@@ -6,24 +6,15 @@
   </head>
   <body>
     <header class="site-header">
-      <img class="logo">
+      <a class="logo">device</a>
       <div class="header-panel">
-        <div class="site-search">
-          <img class="search-icon">
-          <input type="text" class="search-field">
-        </div>
-        <div class="login-wrapper">
-          <img class="login-icon">
-          <a href="#">Вйоти</a>
-        </div>
-        <div class="compare-wrapper">
-          <img class="compare-icon">
-          <a href="#">Сравнить</a>
-        </div>
-        <div class="cart-wrapper">
-          <img class="cart-icon">
-          <a href="#">Корзина</a>
-        </div>
+        <form class="header-panel-form">
+          <input type="search" class="search-field">
+          <input type="submit" value="Найти" class="search-btn">
+          <a href="#" class="login">Войти</a>
+          <a href="#" class="compare">Сравнить</a>
+          <a href="#" class="basket">Корзина</a>
+        </form>
       </div>
       <nav class="header-nav">
         <section class="catalog-nav">
