Replaces all <section> in main menu with <ul><li>.

--- a/index.html
+++ b/index.html
@@ -17,30 +17,21 @@
         </form>
       </div>
       <nav class="header-nav">
-        <section class="catalog-nav">
-          <a href="#">КАТАЛОГ ТОВАРОВ</a>
-          <img class="catalog-plus">
-          <ul class="items-list">
-            <li class="catalog-item"><a href="#">Виртуальная реальность</a></li>
-            <li class="catalog-item"><a href="#">Моноподы для селфи</a></li>
-            <li class="catalog-item"><a href="#">Экшн-камеры</a></li>
-            <li class="catalog-item"><a href="#">Фитнес-браслеты</a></li>
-            <li class="catalog-item"><a href="#">Умные часы</a></li>
-            <li class="catalog-item"><a href="#">Квадрокоптеры</a></li>
-          </ul>
-        </section>
-        <section class="delivery-nav">
-          <a href="#">ДОСТАВКА</a>
-        </section>
-        <section class="delivery-nav">
-          <a href="#">ДОСТАВКА</a>
-        </section>
-        <section class="guarantee-nav">
-          <a href="#">ГАРАНТИЯ</a>
-        </section>
-        <section class="contacts-nav">
-          <a href="#">КОНТАКТЫ</a>
-        </section>
+        <ul class="main-menu">
+          <li class="menu-item"><a href="#">каталог товаров</a>
+            <ul class="items-list">
+              <li class="catalog-item"><a href="#">Виртуальная реальность</a></li>
+              <li class="catalog-item"><a href="#">Моноподы для селфи</a></li>
+              <li class="catalog-item"><a href="#">Экшн-камеры</a></li>
+              <li class="catalog-item"><a href="#">Фитнес-браслеты</a></li>
+              <li class="catalog-item"><a href="#">Умные часы</a></li>
+              <li class="catalog-item"><a href="#">Квадрокоптеры</a></li>
+            </ul>
+          </li>
+          <li class="menu-item"><a href="#" class="delivery">доставка</a></li>
+          <li class="menu-item"><a href="#" class="guarantee">гарантия</a></li>
+          <li class="menu-item"><a href="#" class="contacts">контакты</a></li>
+        </ul>
       </nav>
       <div class="slider-wrapper">
         <div class="slider-element">
