Adds slider elements with switches that works with radio buttons and labels. Adds popular section.

--- a/index.html
+++ b/index.html
@@ -33,14 +33,87 @@
           <li class="menu-item"><a href="#" class="contacts">контакты</a></li>
         </ul>
       </nav>
+    </header>
+    <main>
       <div class="slider-wrapper">
         <div class="slider-element">
-          <img src="#">
-
+          <img src="#" alt="монопод для селфи" height="" width="">
+          <h2 class="slider-title">Делай селфи, как Бен Стиллер!</h2>
+          <p class="el-number">01</p>
+          <p class="slider-el-description">
+            Самая длянная палка для селфи доступна в нашем магазине.
+            Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.
+          </p>
+          <table class="slider-char-table">
+            <tr>
+              <th>Длина палки</th>
+              <th>Вес палки</th>
+              <th>Материал</th>
+            </tr>
+            <tr>
+              <td>8,5 м</td>
+              <td>5 кг</td>
+              <td>Карбон</td>
+            </tr>
+          </table>
+        </div>
+        <div class="slider-element">
+          <img src="#" alt="фитнес-браслет" vheight="" width="">
+          <h2 class="slider-title">Худеем правильно!</h2>
+          <p class="el-number">02</p>
+          <p class="slider-el-description">
+            Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия
+            и соблюдать диету.
+          </p>
+          <table class="slider-char-table">
+            <tr>
+              <th>Без зарядки</th>
+            </tr>
+            <tr>
+              <td>48 часов</td>
+            </tr>
+          </table>
+        </div>
+        <div class="slider-element">
+          <img src="#" alt="квадрокоптер" height="" width="">
+          <h2 class="slider-title">Порхает как бабочка, жалит как пчела!</h2>
+          <p class="el-number">03</p>
+          <p class="slider-el-description">
+            Этот обычный, на первый взгляд, квадрокоптер оснащён мощным лазером,
+            замаскированным под стандартную камеру.
+          </p>
+          <table class="slider-char-table">
+            <tr>
+              <th>Дальность полёта</th>
+              <th>Радиус поражения</th>
+            </tr>
+            <tr>
+              <td>800 м</td>
+              <td>50 м</td>
+            </tr>
+          </table>
+        </div>
+        <div class="slider-switch">
+          <button class="details">
+            <a href="#">подробнее</a>
+          </button>
+          <input id="el1" name="switch" type="radio">
+          <input id="el2" name="switch" type="radio">
+          <input id="el3" name="switch" type="radio">
+          <label for="el1">01</label>
+          <label for="el2">02</label>
+          <label for="el3">03</label>
         </div>
       </div>
-    </header>
-  <main></main>
+      <section class="popular-items">
+        <a href="#">Виртуальная реальность</a>
+        <a href="#">Моноподы для селфи</a>
+        <a href="#">Экшн-камеры</a>
+        <a href="#">Фитнес-браслеты</a>
+        <a href="#">Умные часы</a>
+        <a href="#">Квадрокоптеры</a>
+      </section>
+    </main>
   <footer></footer>
   </body>
 </html>
