Adds service section without tab elements for switching between tabs.

--- a/index.html
+++ b/index.html
@@ -39,58 +39,70 @@
         <div class="slider-element">
           <img src="#" alt="монопод для селфи" height="" width="">
           <h2 class="slider-title">Делай селфи, как Бен Стиллер!</h2>
-          <p class="el-number">01</p>
+          <!--<p class="el-number">01</p>-->
           <p class="slider-el-description">
             Самая длянная палка для селфи доступна в нашем магазине.
             Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.
           </p>
           <table class="slider-char-table">
-            <tr>
-              <th>Длина палки</th>
-              <th>Вес палки</th>
-              <th>Материал</th>
-            </tr>
-            <tr>
-              <td>8,5 м</td>
-              <td>5 кг</td>
-              <td>Карбон</td>
-            </tr>
+            <thead>
+              <tr>
+                <th>Длина палки</th>
+                <th>Вес палки</th>
+                <th>Материал</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>8,5 м</td>
+                <td>5 кг</td>
+                <td>Карбон</td>
+              </tr>
+            <tbody>
           </table>
         </div>
         <div class="slider-element">
           <img src="#" alt="фитнес-браслет" vheight="" width="">
           <h2 class="slider-title">Худеем правильно!</h2>
-          <p class="el-number">02</p>
+          <!--<p class="el-number">02</p>-->
           <p class="slider-el-description">
             Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия
             и соблюдать диету.
           </p>
           <table class="slider-char-table">
-            <tr>
-              <th>Без зарядки</th>
-            </tr>
-            <tr>
-              <td>48 часов</td>
-            </tr>
+            <thead>
+              <tr>
+                <th>Без зарядки</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>48 часов</td>
+              </tr>
+            </tbody>>
           </table>
         </div>
         <div class="slider-element">
           <img src="#" alt="квадрокоптер" height="" width="">
           <h2 class="slider-title">Порхает как бабочка, жалит как пчела!</h2>
-          <p class="el-number">03</p>
+          <!--<p class="el-number">03</p>-->
           <p class="slider-el-description">
             Этот обычный, на первый взгляд, квадрокоптер оснащён мощным лазером,
             замаскированным под стандартную камеру.
           </p>
           <table class="slider-char-table">
-            <tr>
-              <th>Дальность полёта</th>
-              <th>Радиус поражения</th>
-            </tr>
-            <tr>
-              <td>800 м</td>
-              <td>50 м</td>
-            </tr>
+            <thead>
+              <tr>
+                <th>Дальность полёта</th>
+                <th>Радиус поражения</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>800 м</td>
+                <td>50 м</td>
+              </tr>
+            </tbody>
           </table>
         </div>
         <div class="slider-switch">
@@ -106,14 +118,42 @@
         </div>
       </div>
       <section class="popular-items">
-        <a href="#">Виртуальная реальность</a>
-        <a href="#">Моноподы для селфи</a>
-        <a href="#">Экшн-камеры</a>
-        <a href="#">Фитнес-браслеты</a>
-        <a href="#">Умные часы</a>
-        <a href="#">Квадрокоптеры</a>
+        <h3><a href="#">Виртуальная реальность</a></h3>
+        <h3><a href="#">Моноподы для селфи</a></h3>
+        <h3><a href="#">Экшн-камеры</a></h3>
+        <h3><a href="#">Фитнес-браслеты</a></h3>
+        <h3><a href="#">Умные часы</a></h3>
+        <h3><a href="#">Квадрокоптеры</a></h3>
+      </section>
+      <section class="service">
+        <dl>
+          <dt><h2>Доставка</h2></dt>
+          <dd>
+            <p>
+              Мы с удовольствием доставим ваш товар прямо к вашему подъезду
+              совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его
+              на ваш этаж.
+            </p>
+          </dd>
+          <dt><h2>Гарантия</h2></dt>
+          <dd>
+            <p>
+              Если из-за возгорания купленного у нас товара у вас сгорит
+              дом — не переживайте, мы выдадим вам новый. Товар, не дом,
+              конечно же.
+            </p>
+          </dd>
+          <dt><h2>Кредит</h2></dt>
+          <dd>
+            <p>
+              Залезть в долговую яму стало проще! Кредитные консультанты подберут
+              для вас наиболее выгодные условия кредита. Выгодные для нашего банка,
+              разумеется.
+            </p>
+          </dd>
+        </dl>
       </section>
     </main>
-  <footer></footer>
+    <footer></footer>
   </body>
 </html>
