Adds brands section.

--- a/index.html
+++ b/index.html
@@ -153,6 +153,20 @@
           </dd>
         </dl>
       </section>
+      <section class="brands">
+        <a href="#" class="brand-logo">
+          <img src="#" alt="DJI" height="" wdith="">
+        </a>
+        <a href="#" class="brand-logo">
+          <img src="#" alt="SP Gadgets" height="" wdith="">
+        </a>
+        <a href="#" class="brand-logo">
+          <img src="#" alt="GoPro" height="" wdith="">
+        </a>
+        <a href="#" class="brand-logo">
+          <img src="#" alt="HTC Vive" height="" wdith="">
+        </a>
+      </section>
     </main>
     <footer></footer>
   </body>
