Adds sections 'about us' and 'contacts'.

--- a/index.html
+++ b/index.html
@@ -167,6 +167,30 @@
           <img src="#" alt="HTC Vive" height="" wdith="">
         </a>
       </section>
+      <section class="about-us">
+        <h2>О нас</h2>
+        <p>Огромный выбор гаджетов не оставит равнодушным гика,
+        который есть в каждом из нас.</p>
+        <p>Мы можем доставить ваш товар в самые отдалённые точки
+        России! DEVICE работает со многими транспортными компаниями:</p>
+        <ul class="transport-list">
+          <li><h3>Деловые линии</h3></li>
+          <li><h3>Автотрейдинг</h3></li>
+          <li><h3>ЖелДорЭкспедиция</h3></li>
+        </ul>
+        <button>
+          <a href="#">подробнее о нас</a>
+        </button>
+      </section>
+      <section class="contacts">
+        <h2>Контакты</h2>
+        <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете
+          проверить работоспособность покупки. Всякое бывает.</p>
+        <img src="#" alt="карта проезда" height="" wdith="">
+        <button>
+          <a href="#">напишите нам</a>
+        </button>
+      </section>
     </main>
     <footer></footer>
   </body>
