Adds footer and changes some classes.

--- a/index.html
+++ b/index.html
@@ -6,19 +6,19 @@
   </head>
   <body>
     <header class="site-header">
-      <a class="logo">device</a>
+      <a href="#" class="logo">device</a>
       <div class="header-panel">
         <form class="header-panel-form">
           <input type="search" class="search-field">
           <input type="submit" value="Найти" class="search-btn">
-          <a href="#" class="login">Войти</a>
-          <a href="#" class="compare">Сравнить</a>
-          <a href="#" class="basket">Корзина</a>
+          <a href="#" class="site-link login">Войти</a>
+          <a href="#" class="site-link compare">Сравнить</a>
+          <a href="#" class="site-link basket">Корзина</a>
         </form>
       </div>
       <nav class="header-nav">
         <ul class="main-menu">
-          <li class="menu-item"><a href="#">каталог товаров</a>
+          <li class="menu-item"><a href="#" class="menu-link">каталог товаров</a>
             <ul class="items-list">
               <li class="catalog-item"><a href="#">Виртуальная реальность</a></li>
               <li class="catalog-item"><a href="#">Моноподы для селфи</a></li>
@@ -28,9 +28,9 @@
               <li class="catalog-item"><a href="#">Квадрокоптеры</a></li>
             </ul>
           </li>
-          <li class="menu-item"><a href="#" class="delivery">доставка</a></li>
-          <li class="menu-item"><a href="#" class="guarantee">гарантия</a></li>
-          <li class="menu-item"><a href="#" class="contacts">контакты</a></li>
+          <li class="menu-item"><a href="#" class="menu-link">доставка</a></li>
+          <li class="menu-item"><a href="#" class="menu-link">гарантия</a></li>
+          <li class="menu-item"><a href="#" class="menu-link">контакты</a></li>
         </ul>
       </nav>
     </header>
@@ -192,6 +192,27 @@
         </button>
       </section>
     </main>
-    <footer></footer>
+    <footer class="site-header">
+      <div class="footer-top">
+        <a href="#" class="logo">device</a>
+        <a href="#" class="site-link login">Войти</a>
+        <a href="#" class="site-link compare">Сравнить</a>
+        <a href="#" class="site-link basket">Корзина</a>
+      </div>
+      <div class="footer-mid">
+        <p>г. Москва, ул. Строителей, 15</p>
+        <a href="#" class="logo">device</a>
+        <a href="#" class="menu-link">доставка</a>
+        <a href="#" class="menu-link">гарантия</a>
+        <a href="#" class="menu-link">контакты</a>
+        <p>Тел.: +7 (495) 495-95-95</p>
+      </div>
+      <section class="footer-socials">
+        <a href="#" class="social fb"></a>
+        <a href="#" class="social inst"></a>
+        <a href="#" class="social tw"></a>
+        <a href="#" class="copyright"></a>
+      </section>
+    </footer>
   </body>
 </html>
