Adds 'write us' pop-up.

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
               <tr>
                 <td>48 часов</td>
               </tr>
-            </tbody>>
+            </tbody>
           </table>
         </div>
         <div class="slider-element">
@@ -214,5 +214,17 @@
         <a href="#" class="copyright"></a>
       </section>
     </footer>
+    <section class="pop-up write-us">
+      <form method="post">
+        <label for="client-name">Ваше имя:</label>
+        <input type="text" id="client-name" name="client-name" placeholder="Имя Фамилия">
+        <label for="email">Ваш e-mail</label>
+        <input type="email" id="email" name="email" placeholder="email@example.com">
+        <label for="message">Текст письма:</label>
+        <textarea name="message" id="message" placeholder="В свободной форме"></textarea>
+        <button type="submit" value="отправить"></button>
+        <button type="button" class="close"></button>
+      </form>
+    </section>
   </body>
 </html>
