Adds empty section for map pop-up.

--- a/index.html
+++ b/index.html
@@ -226,5 +226,6 @@
         <button type="button" class="close"></button>
       </form>
     </section>
+    <section class="pop-up map"></section>
   </body>
 </html>
