Adds catalog page, page-section menu and filter section.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <a href="#" class="logo">device</a>
       <div class="header-panel">
         <form class="header-panel-form">
-          <input type="search" class="search-field">
+          <input type="search" placeholder="Поиск по сайту" class="search-field">
           <input type="submit" value="Найти" class="search-btn">
           <a href="#" class="site-link login">Войти</a>
           <a href="#" class="site-link compare">Сравнить</a>
