Adds sort for goods and section for goods with navigation panel.

--- a/catalog.html
+++ b/catalog.html
@@ -90,6 +90,43 @@
           <button type="button">показать</button>
         </form>
     </section>
+    <section class="sort-goods">
+      <h3>сортировка:</h3>
+      <a href="#" class="sort-attribute">По цене</a>
+      <a href="#" class="sort-attribute">По типу</a>
+      <a href="#" class="sort-attribute">По популярности</a>
+      <button type="button" class="sort-switch-btn up-switch"></button>
+      <button type="button" class="sort-switch-btn down-switch"></button>
+    </section>
+    <section class="goods">
+      <section class="good-item">
+        <h4>Любительская селфи-палка</h4>
+        <p>500 руб</p>
+        <img src="#">
+      </section>
+      <section class="good-item">
+        <h4>Профессиональная селфи-палка</h4>
+        <p>1500 руб</p>
+        <img src="#">
+      </section>
+      <section class="good-item">
+        <h4>Непотопляемая селфи-палка</h4>
+        <p>2500 руб</p>
+        <img src="#">
+      </section>
+      <section class="good-item">
+        <h4>Селфи-палка &#171;Следуй за мной&#187;</h4>
+        <p>4900 руб</p>
+        <img src="#">
+      </section>
+      <nav class="goods-page-nav">
+        <a href="#">назад</a>
+        <a href="#">1</a>
+        <a href="#">2</a>
+        <a href="#">3</a>
+        <a href="#">вперёд</a>
+      </nav>
+    </section>
   </main>
   <footer class="site-header">
     <div class="footer-top">
