Removes button wrapper from links.

--- a/index.html
+++ b/index.html
@@ -178,18 +178,14 @@
           <li><h3>Автотрейдинг</h3></li>
           <li><h3>ЖелДорЭкспедиция</h3></li>
         </ul>
-        <button>
-          <a href="#">подробнее о нас</a>
-        </button>
+        <a href="#" class="link-btn">подробнее о нас</a>
       </section>
       <section class="contacts">
         <h2>Контакты</h2>
         <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете
           проверить работоспособность покупки. Всякое бывает.</p>
         <img src="#" alt="карта проезда" height="" wdith="">
-        <button>
-          <a href="#">напишите нам</a>
-        </button>
+        <a href="#" class="link-btn">напишите нам</a>
       </section>
     </main>
     <footer class="site-header">
