Makes few changes with some classes and position of some tegs.

--- a/catalog.html
+++ b/catalog.html
@@ -75,13 +75,13 @@
           <fieldset>
             <legend>Bluetooth</legend>
             <input type="radio" id="bt-on"
-                   name="bt-on" value="bt-on">
+                   name="bt" value="on">
             <label for="bt-on">Есть</label>
             <input type="radio" id="bt-off"
-                   name="bt-off" value="bt-off">
+                   name="bt" value="off">
             <label for="bt-off">Нет</label>
           </fieldset>
-          <button type="button">показать</button>
+          <button type="submit">показать</button>
         </form>
     </section>
     <section class="sort-goods">
