Changes area of header form, adds action and method for form and adds label for icon-search.

--- a/catalog.html
+++ b/catalog.html
@@ -8,14 +8,15 @@
   <header class="site-header">
     <a href="#" class="logo">device</a>
     <div class="header-panel">
-      <form class="header-panel-form">
-        <input type="search" placeholder="Поиск по сайту" class="search-field">
+      <form method="post" action="" class="header-panel-form">
+        <label for="search-field"></label>
+        <input type="search" placeholder="Поиск по сайту" id="search-field" class="search-field">
         <input type="submit" value="Найти" class="search-btn">
-        <a href="#" class="site-link login">Валентин Петухов</a>
-        <a href="#" class="site-link logout">Выйти</a>
-        <a href="#" class="site-link compare">Сравнить</a>
-        <a href="#" class="site-link basket">Корзина</a>
       </form>
+      <a href="#" class="site-link login">Валентин Петухов</a>
+      <a href="#" class="site-link logout">Выйти</a>
+      <a href="#" class="site-link compare">Сравнить</a>
+      <a href="#" class="site-link basket">Корзина</a>
     </div>
     <nav class="header-nav">
       <ul class="main-menu">
