Makes changes for links in sort section and adds required tags for items in good section and fixes position mistakes.

--- a/catalog.html
+++ b/catalog.html
@@ -78,43 +78,59 @@
     </section>
     <section class="sort-goods">
       <h3>сортировка:</h3>
-      <a href="#" class="sort-attribute">По цене</a>
+      <a href="#" class="sort-attribute active-sort">По цене</a>
       <a href="#" class="sort-attribute">По типу</a>
       <a href="#" class="sort-attribute">По популярности</a>
-      <button type="button" class="sort-switch-btn up-switch"></button>
-      <button type="button" class="sort-switch-btn down-switch"></button>
+      <a href="#" class="sort-switch-btn up-switch"></a>
+      <a href="#" class="sort-switch-btn down-switch"></a>
     </section>
     <section class="goods">
-      <section class="good-item">
+      <article class="good-item">
+        <img src="#">
         <h4>Любительская селфи-палка</h4>
         <p>500 руб</p>
+        <div class="good-hover-actions">
+          <a href="#" class="link-btn">в корзину</a>
+          <a href="#" class="link">Добавить к сравнению</a>
+        </div>
+      </article>
+      <article class="good-item">
         <img src="#">
-      </section>
-      <section class="good-item">
         <h4>Профессиональная селфи-палка</h4>
-        <p>1500 руб</p>
+        <p>1&nbsp;500 руб</p>
+        <div class="good-hover-actions">
+          <a href="#" class="link-btn">в корзину</a>
+          <a href="#" class="link">Добавить к сравнению</a>
+        </div>
+      </article>
+      <article class="good-item">
         <img src="#">
-      </section>
-      <section class="good-item">
         <h4>Непотопляемая селфи-палка</h4>
-        <p>2500 руб</p>
+        <p>2&nbsp;500 руб</p>
+        <div class="good-hover-actions">
+          <a href="#" class="link-btn">в корзину</a>
+          <a href="#" class="link">Добавить к сравнению</a>
+        </div>
+      </article>
+      <article class="good-item new-item">
         <img src="#">
-      </section>
-      <section class="good-item">
-        <h4>Селфи-палка &#171;Следуй за мной&#187;</h4>
-        <p>4900 руб</p>
-        <img src="#">
-      </section>
+        <h4>Селфи-палка &laquo;Следуй за мной&raquo;</h4>
+        <p>4&nbsp;900 руб</p>
+        <div class="good-hover-actions">
+          <a href="#" class="link-btn">в корзину</a>
+          <a href="#" class="link">Добавить к сравнению</a>
+        </div>
+      </article>
       <nav class="goods-page-nav">
         <a href="#">назад</a>
-        <a href="#">1</a>
+        <a class="active-good-page">1</a>
         <a href="#">2</a>
         <a href="#">3</a>
         <a href="#">вперёд</a>
       </nav>
     </section>
   </main>
-  <footer class="site-header">
+  <footer class="site-footer">
     <div class="footer-top">
       <a href="#" class="logo">device</a>
       <a href="#" class="site-link login">Валентин Петухов</a>
