Makes few fixes in footer of catalog page.

--- a/catalog.html
+++ b/catalog.html
@@ -140,18 +140,19 @@
     </div>
     <div class="footer-mid">
       <p>г. Москва, ул. Строителей, 15</p>
-      <a href="#" class="logo">device</a>
       <a href="#" class="menu-link">доставка</a>
       <a href="#" class="menu-link">гарантия</a>
       <a href="#" class="menu-link">контакты</a>
       <p>Тел.: +7 (495) 495-95-95</p>
     </div>
-    <section class="footer-socials">
-      <a href="#" class="social fb"></a>
-      <a href="#" class="social inst"></a>
-      <a href="#" class="social tw"></a>
-      <a href="#" class="copyright"></a>
-    </section>
+    <div class="footer-bottom">
+      <section class="social">
+        <a href="https://ru-ru.facebook.com/htmlacademy/" target="_blank" class="social fb"></a>
+        <a href="https://www.instagram.com/htmlacademy/" target="_blank" class="social inst"></a>
+        <a href="https://twitter.com/htmlacademy_ru?lang=ru" target="_blank" class="social tw"></a>
+      </section>
+      <a href="https://htmlacademy.ru/intensive/htmlcss" target="_blank" class="copyright"></a>
+    </div>
   </footer>
 </body>
 </html>
